--- a/garden-shop/release/business.html
+++ b/garden-shop/release/business.html
@@ -483,51 +483,51 @@
 <section class="section tile tile_3col">
     <div class="container">
         <div class="tile__wrapper">
-            <div class="info-item">
-    <div class="info-item__img">
+            <div class="info-card">
+    <div class="info-card__img">
         <img src="./images/article.jpg" alt="img">
     </div>
-    <div class="info-item__text">
+    <div class="info-card__text">
         Персональный менеджер и индивидуальное обслуживание
     </div>
 </div>
-            <div class="info-item">
-    <div class="info-item__img">
+            <div class="info-card">
+    <div class="info-card__img">
         <img src="./images/article.jpg" alt="img">
     </div>
-    <div class="info-item__text">
+    <div class="info-card__text">
         Персональный менеджер и индивидуальное обслуживание
     </div>
 </div>
-            <div class="info-item">
-    <div class="info-item__img">
+            <div class="info-card">
+    <div class="info-card__img">
         <img src="./images/article.jpg" alt="img">
     </div>
-    <div class="info-item__text">
+    <div class="info-card__text">
         Персональный менеджер и индивидуальное обслуживание
     </div>
 </div>
-            <div class="info-item">
-    <div class="info-item__img">
+            <div class="info-card">
+    <div class="info-card__img">
         <img src="./images/article.jpg" alt="img">
     </div>
-    <div class="info-item__text">
+    <div class="info-card__text">
         Персональный менеджер и индивидуальное обслуживание
     </div>
 </div>
-            <div class="info-item">
-    <div class="info-item__img">
+            <div class="info-card">
+    <div class="info-card__img">
         <img src="./images/article.jpg" alt="img">
     </div>
-    <div class="info-item__text">
+    <div class="info-card__text">
         Персональный менеджер и индивидуальное обслуживание
     </div>
 </div>
-            <div class="info-item">
-    <div class="info-item__img">
+            <div class="info-card">
+    <div class="info-card__img">
         <img src="./images/article.jpg" alt="img">
     </div>
-    <div class="info-item__text">
+    <div class="info-card__text">
         Персональный менеджер и индивидуальное обслуживание
     </div>
 </div>
