--- a/garden-shop/release/contacts.html
+++ b/garden-shop/release/contacts.html
@@ -479,7 +479,7 @@
             </div>
         </div>
         <div class="contacts__map" id="map">
-            <a href="#popup-text" data-fancybox class="contacts__map-btn btn">Как проехать?</a>
+            <!-- <a href="#popup-text" data-fancybox class="contacts__map-btn btn">Как проехать?</a> -->
             <script>
                 window.onload = () => {
                     ymaps.ready((e) => {
