--- a/_Components-Library/accordion/index.html
+++ b/_Components-Library/accordion/index.html
@@ -1,3 +1,35 @@
+<div class="accordion accordion_v1">
+	<div class="accordion__item">
+		<div class="accordion__btn">Profile</div>
+		<div class="accordion__body">
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium minima
+				dolores assumenda</p>
+		</div>
+	</div>
+
+
+	<div class="accordion__item">
+		<div class="accordion__btn">Messages</div>
+		<div class="accordion__body">
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium minima
+				dolores assumenda</p>
+		</div>
+	</div>
+
+
+	<div class="accordion__item">
+		<div class="accordion__btn">Setting</div>
+		<div class="accordion__body">
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium minima
+				dolores assumenda</p>
+		</div>
+	</div>
+</div>
+
+
+
+
+
 <div class="accordion_v1">
 	<div class="a-container">
 		<div class="a-btn">Profile</div>
