--- a/_Components-Library/checkbox/index.html
+++ b/_Components-Library/checkbox/index.html
@@ -1,4 +1,6 @@
-<label class="checkbox">One
+<label class="checkbox">
 	<input class="checkbox__input" type="checkbox" checked="checked">
 	<span class="checkbox__checkmark"></span>
+	<span class="checkbox__text">Ознакомлен и согласен с условиями Пользовательского
+		соглашения</span>
 </label>
